--- a/style.css
+++ b/style.css
@@ -73,6 +73,16 @@
     cursor: pointer;
     margin-top: 30px;
   }
+  .info-button {
+    background-color: #44afff;
+    color: black;
+    font-weight: bold;
+    padding: 10px 20px;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 30px;
+  }
   
   .right-section {
     flex: 1;
