--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@
   
   button {
     background-color: #007bff;
-    color: white;
+    color: rgb(0, 0, 0);
     border: none;
     padding: 10px 15px;
     cursor: pointer;
@@ -141,3 +141,7 @@
     font-size: 1.2em;
   }
   
+  label {
+    color: black;
+    font-style: oblique;
+  } 
